fix menu style on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,20 @@ header {
   padding-left: 32px;
   height: 100%;
   background: rgba(255, 255, 255, 0.04);
-  backdrop-filter: blur(40.7742px);
+  -webkit-backdrop-filter: blur(40.7742px);
+ 
 }
+.right::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    background-color: rgba(255, 255, 255, 0.5); /* set the desired background color */
+    opacity: 0.5; /* set the desired opacity */
+  }
 .iconClose {
   width: 100%;
   padding-right: 11%;
